--- a/01-Android/app/src/main/res/values-en/otros-valores-ingles.xml
+++ b/01-Android/app/src/main/res/values-en/otros-valores-ingles.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_name">gr2sw2024b_eacg</string>
     <string name="saludo">Hello Friends</string>
-
+    <color name="saludo_color">#311B92</color>
 </resources>
