--- a/01-Android/app/src/main/res/layout/activity_main.xml
+++ b/01-Android/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/saludo"
+        android:textAlignment="center"
+        android:textColor="@color/saludo_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
